simplify component scan setup