@@ -1,6 +1,6 @@
 package com.celements.spring.context;
 
-import static org.xwiki.component.spring.XWikiSpringConfig.*;
+import static com.celements.spring.config.XWikiSpringConfig.*;
 
 import java.util.List;
 
@@ -13,10 +13,6 @@ import org.springframework.beans.factory.support.BeanNameGenerator;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 import org.springframework.context.annotation.FullyQualifiedAnnotationBeanNameGenerator;
 import org.xwiki.component.descriptor.ComponentDescriptor;
-import org.xwiki.component.spring.XWikiSpringConfig;
-
-import com.celements.spring.CelSpringConfig;
-import com.google.common.collect.ImmutableList;
 
 /**
  * Extension of the {@link AnnotationConfigApplicationContext} ensuring backwards compatibility with
@@ -28,9 +24,7 @@ public class CelSpringContext extends AnnotationConfigApplicationContext {
   private static final Logger LOGGER = LoggerFactory.getLogger(CelSpringContext.class);
 
   public CelSpringContext() {
-    this(ImmutableList.of(
-        XWikiSpringConfig.class,
-        CelSpringConfig.class));
+    this(List.of());
   }
 
   public CelSpringContext(@NotNull List<Class<?>> configs) {
@@ -42,7 +36,11 @@ public class CelSpringContext extends AnnotationConfigApplicationContext {
       @NotNull List<Class<?>> configs) {
     super(new XWikiShimBeanFactory());
     setBeanNameGenerator(beanNameGenerator);
-    register(configs.toArray(new Class[configs.size()]));
+    if (configs.isEmpty()) {
+      scan("com.celements.spring.config");
+    } else {
+      register(configs.toArray(new Class[configs.size()]));
+    }
     loadXWikiDescriptors(this).forEach(this::registerXWikiComponent);
     LOGGER.info("initializing configs: {}", configs);
   }
